--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 GO_ENV=development
+PORT=3000
+GRPC_PORT=3030
 DATABASE_URL=postgresql://zunohan:111111@192.168.49.2:30844/test?schema=public
 DB_HOST=192.168.49.2
 DB_USERNAME=zunohan
